<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.login.LoginActivity"
    tools:showIn="@layout/activity_login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:gravity="center_horizontal"
                android:text="Coordinación de Servicios"
                android:textColor="#3B1ACE"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                app:fontFamily="serif" />

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profesional_v1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/textView_usuario"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:focusable="true"
                android:hint="@string/editText_usuario"
                android:textColorHighlight="#ff7eff15"
                android:textColorHint="#ffff25e6"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/textView_contrasena"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:focusable="true"
                android:hint="@string/editText_contrasena"
                android:inputType="textPassword"
                android:textColorHighlight="#ff7eff15"
                android:textColorHint="#ffff25e6"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/lopd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="5dp"
                android:text="@string/lopd_message"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/entrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="10"
                    android:text="@string/button_login" />

                <Button
                    android:id="@+id/registrarse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/button_registro" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="150dp"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true"
        android:background="#88000000"/>

</FrameLayout>